# MinCompSpin_discrete

./: CMakeLists.txt  README.md  build_and_test.sh
src/: main.cpp
src/model/: data.cpp  evidence.cpp  gauge_transform.cpp  model.cpp  model.h  partition.cpp  spin_op.cpp
src/search_algorithms/: CMakeLists.txt  divide_and_conquer.cpp  exhaustive.cpp  greedy.cpp  search.h
tests/: CMakeLists.txt  test_data.cpp  test_evidence.cpp  test_gt.cpp  test_model.cpp  test_partition.cpp  test_search.cpp  test_spin_op.cpp
